--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"emailjs": "^4.0.3",
+		"framer-motion": "^11.0.20",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-hot-toast": "^2.4.1",
+		"react-router-dom": "^6.22.3",
+		"react-spinners": "^0.13.8"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.66",
